# pypkgs_dj

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pypkgs_dj.rst
tests/: test_pypkgs_dj.py
