[tool.poetry]
name = "pypkgs_dj"
version = "0.1.0"
description = "This is the initial step of creating a toy Python package."
authors = ["Jianru D <dengjr1509@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
